<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpeyScaler</string>
    <string name="tagline">Fotograflarini 2K\'dan 32K\'ya buyut</string>
    <string name="pick_photo">Fotograf Sec</string>
    <string name="change_photo">Fotografi Degistir</string>
    <string name="no_photo">Henuz fotograf secilmedi</string>
    <string name="target_resolution">Hedef cozunurluk</string>
    <string name="settings">Ayarlar</string>
    <string name="sharpen">Detay keskinligi</string>
    <string name="format">Kayit bicimi</string>
    <string name="quality">JPEG kalitesi</string>
    <string name="start">Buyut ve Kaydet</string>
    <string name="cancel">Iptal</string>
    <string name="open">Galeride Ac</string>
    <string name="share">Paylas</string>
    <string name="again">Yeni Buyutme</string>
    <string name="channel_name">Buyutme islemi</string>
    <string name="notification_title">Fotograf buyutuluyor</string>
</resources>
